Update homepage title and subtitle to be beagle-specific for Ridglan trial; fix banner font size to scale appropriately and fluidly with screen size; position image so dog's eyes are always visible

--- a/styles/template.css
+++ b/styles/template.css
@@ -162,9 +162,9 @@
 
 .masthead h1 {
   font-family: "Varela Round", Helvetica, Arial, sans-serif;
-  font-size: 2.5rem;
-  line-height: 2.5rem;
-  letter-spacing: 0.8rem;
+  font-size: min(max(30px, calc(15px + 3vw)), 66px);
+  line-height: min(max(45px, calc(22.5px + 4.5vw)), 99px); /* 1.5x font size */
+  letter-spacing: min(max(0.3rem, calc(0.3rem * 0.5vw)), 0.8rem);
   color: white;
   background: -webkit-linear-gradient(
     rgba(255, 255, 255, 0.75),
@@ -175,30 +175,14 @@
 }
 
 .masthead h2 {
-  max-width: 20rem;
-  font-size: 1rem;
-}
-
-@media (min-width: 768px) {
-  .masthead h1 {
-    font-size: 4rem;
-    line-height: 4rem;
-  }
+  max-width: 75%;
+  font-size: min(max(20px, calc(10px + 2vw)), 40px);
 }
 
 @media (min-width: 992px) {
   .masthead {
     height: 100vh;
     padding-top: 350px;
-  }
-  .masthead h1 {
-    font-size: 6.5rem;
-    line-height: 6.5rem;
-    letter-spacing: 0.8rem;
-  }
-  .masthead h2 {
-    max-width: 30rem;
-    font-size: 1.25rem;
   }
 }
 
